# ChangeLog for media-tv/xbmc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.118 2012/03/01 05:14:52 vapier Exp $

*xbmc-11.0_rc1 (01 Mar 2012)

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> -xbmc-11.0_beta3.ebuild,
  +xbmc-11.0_rc1.ebuild:
  Version bump #406299 by Ben Kohler.

  01 Mar 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild,
  +files/xbmc-9999-no-exec-stack.patch:
  Fix exec stack warnings.

  26 Feb 2012; Mike Frysinger <vapier@gentoo.org> xbmc-11.0_beta3.ebuild,
  xbmc-9999.ebuild:
  Control bluez dep with USE=bluetooth #403561 by BT.

  17 Feb 2012; Christian Ruppert <idl0r@gentoo.org> xbmc-11.0_beta3.ebuild:
  Add QA_EXECSTACK

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-nomythtv.patch:
  Revise mysql patch to work #403869 by Martin Dummer.

*xbmc-11.0_beta3 (14 Feb 2012)

  14 Feb 2012; Mike Frysinger <vapier@gentoo.org> +xbmc-11.0_beta3.ebuild:
  Version bump.

  04 Feb 2012; Mike Frysinger <vapier@gentoo.org>
  +files/xbmc-11.0-libpng-1.5.patch, xbmc-9999.ebuild:
  Add libpng patch to live version.

  04 Feb 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild,
  files/xbmc-9999-nomythtv.patch:
  Split mysql/mythtv support #401653.

  04 Feb 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Require ffmpeg be built with USE=encode to make things "just work" #402103 by
  Tomasz Golinski.

  27 Jan 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild,
  +files/xbmc-9999-no-arm-flags.patch:
  Disable hardcoding of random ARM compiler flags #400617 by Fabio Erculiani.

  27 Jan 2012; Mike Frysinger <vapier@gentoo.org>
  files/xbmc-9999-nomythtv.patch:
  Update patch to apply to latest git #400781 by Ben Kohler.

  24 Jan 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild:
  Fix typo pointed out by Stéphane Kattoor.

  24 Jan 2012; Mike Frysinger <vapier@gentoo.org> xbmc-9999.ebuild,