@@ -10,26 +10,26 @@ AUX xbmc-9999-no-arm-flags.patch 542 RMD160 108586f2956cc27cc9f3c582565bd4e2f22f
 AUX xbmc-9999-no-exec-stack.patch 782 RMD160 d1d9c9ea4d92254776f4cc431228ff39180430d4 SHA1 308e1c765ddc46c45b974a203bbb17ea13858fba SHA256 0d3085458ff9c8c22f4dd406ee611d74909bb1dc2de4788b67e30cb5967c819f
 AUX xbmc-9999-nomythtv.patch 6190 RMD160 829dff4b58098ee0935aed6fcda345e06abdb7b3 SHA1 d34afef9342b1d5781729433795cb23240fa5d6b SHA256 ffb1eb49f94b4ae41e5d79172499671915122a58af248b0585ee276e4aa2c87e
 DIST xbmc-10.1.tar.gz 130187822 RMD160 a4ddb06b396b8ae437bf30bea5b44396b54ebc5b SHA1 7a9f4e2c18a23d687ecfc744f2e051e4f88ef01a SHA256 3403195b7eb1d076523f2394793b7f050df00743892b031f6fea86b998559d8a
-DIST xbmc-11.0-Eden_rc1.tar.gz 59387977 RMD160 08a89619a7a802db27a89905c10dc1e173ee5651 SHA1 673881363afef3401ffbbcf95363f82f9514e04e SHA256 6a3d5caa3e983c3dbc8fa07dad282fc2bce446f72fc17531a90409ad1641ece2
+DIST xbmc-11.0-Eden_rc2.tar.gz 59257824 RMD160 e0efe3c69de4e990ca52f994c242f5a232843f72 SHA1 ff3b02d56d9a7ec356fa7064087062721d183773 SHA256 7a52850243e85ca51043c9163104ceda14d42d2ab682255dd4d4cecd05c1d802
 EBUILD xbmc-10.1.ebuild 5390 RMD160 ccb062b93f485e70ffba8d108aae662d10533c12 SHA1 99bcc61eed8b3086085caeaa476e1c646e24bdd1 SHA256 df2669bfd06df9b2cbdb12ba25a5ad2858827f8613f495b2267109a1158a5d35
-EBUILD xbmc-11.0_rc1.ebuild 5674 RMD160 cdc279b5160f2f7951bc4970564f40309fd10387 SHA1 b24755051b64080ee1fbb735f542489e5355cd89 SHA256 9438cc7008f5bec3554d153777301fd1e50989d340d48bdcf3a9d144c03c6591
-EBUILD xbmc-9999.ebuild 5578 RMD160 3c6e0e03980bb5dac2082d156af6754e736ad4e6 SHA1 08af532104ad653f0a8f8fd86880e074ea92ba1c SHA256 09dbacd8002255259bec2bd8e8bebb6a2b96a06a92d86a4071f782ebc7920c45
-MISC ChangeLog 18527 RMD160 c7ede4e498a8f065f6a1746a365fcc064182e9a9 SHA1 9ce20181e9b69a7ceb2a632393e2325c90a4a450 SHA256 4b0fa38bb5a6951101827399e1dee68c0a606aafc86cd711902bf4c779b9ee0d
+EBUILD xbmc-11.0_rc2.ebuild 5844 RMD160 43955174b62863e9c8b1d4e8f803a5b94200492b SHA1 f03e536212b2b621fda49be4a239fbc38df0396e SHA256 2dbe22e227b9ad665277f714e0b22d3bb42677db261062dc17ad195cbebfb7b1
+EBUILD xbmc-9999.ebuild 5749 RMD160 865a8b3591e82f8e878c2579129db6fc7c3aaa2e SHA1 8bb2225393452597211f888deffb887b2a6d7951 SHA256 e03217e951701f0fa4602fbec4b0d508c9b54e0bfee8bbf6e93658ef144b3695
+MISC ChangeLog 18837 RMD160 906fea4ce28984d03d91b85fdc0e1b62972152f1 SHA1 86837c485a38539458caad4834ec9af7049460f2 SHA256 39e6415f8022ea68798e9fcc4b36c74392fe944bcf1ea29d1eb672aac307f35c
 MISC metadata.xml 932 RMD160 fbedc1d562949001f2195a49f375d2e4a1fdc7ff SHA1 c102da84b6cd9160308943fc7cc7801aff691a46 SHA256 2f82a971dfec33d4958ee8977011928976c4aab5f4e03139be6a6245bf3eb62d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPTwXWAAoJELEHsLL7fEFW2NcQAMKg9OSxaRWlfxpZrSvptjke
-PN6Sq2h12DGPoO/i1GSFGQhGP6BNvRha8z/RzUH0Ga2HrOy0W1no/uZ38KBMIaJw
-ScMH5wNGlemCcUH73x6/qtxfbuPhTA9/QNmqkav+YEDyTnJRAObfuBN4VkA0pV7K
-F8xkmSYElfITgZsO0pVl4I+Fxcvs4kZCKP3oI4FGU8bNxYWbpZyzcgYpARtvxquT
-LkHgPlvLtoL7vtWtnRBsrcgo6LavP7HSdAWUQ2hoNPpfje3ct8afl8IVeDqzEhzn
-VV+3SvTHHdzkVuqXvWvaile1c49PY0GWuBeGbOKLdSQwDzog1M6wqMzEmLKhLGh3
-ct2NaiXzRCCnsVxio7oES1jsA2Pe5FXsElq6x/FRf/+KSDBi6men/Z9n8zpoPvbA
-F82PFkeBfpe81S5922Rh8cv8HHIP7P9dHWRqGFjTOogUCTatQ+QeEyqlYZIUT+MH
-v5O28aDY8bN5Zv0vqUaVnId0JjNaJTxe1lIzzIRz2aaA61z3GsKYXgaxhRrGNvQn
-9bb9NiQh9Qmkb3CLxQNhMtqDeKCF7PPzNZ8uq8SR6nc3caFJmeQGH3OpBRZogwK0
-54x+3Z0LsgDe8iZejiv4d/64DGqTtROx2oceE3qJfciTEKmxE7Pa4tT0Kycx7Pdq
-Y7cw2JS+XLjNIabxqHck
-=YXVn
+iQIcBAEBAgAGBQJPYjV2AAoJEOSiRoyO7jvonCIQAJc/unQ6Bu5PPHTrQwhI0LiT
+8KWjwgxa+jsws5gGMfcOQ34QPJGVnKoLk6U+r2EC7/Gp7zE6+XAoAiOQIv9u20sV
+dSsa1xR6OAPwZTn89V7gt2F9/ZLaPnJgRSFGuLoIsd89jia+GlzfiaduldIrUYQ7
+uERZaqIpruUO3BfEndV9BfNrtWGLRJ1XWjRZm860Dd5pRX7bTd2mknfWCZYWYcc0
+oi2kC9M7qdALlKX9SpELM+rBzkCjEdYUE3rnK4pcQIh/CGByWMtYZ7GGb04ujN3s
+AtVtgCFsFgqJkz+3LPr9J5lG4G+3wZ8NMBKX7pYQmwGYoxL/vsIoFA9CpIJCkg32
+x31qrL5MpkRQETRfOqaTr/zrTWax8itoJYKdGXgr+RrHlsAnQ6I5C4EiQwxUODkK
+gD/k2SN9Yk/3oA7OGsHlyIn5qxkmLzqYQ5B0p1wB9zUrKKWhyF0G64Oih4rrLEwM
+c7HQLnJTno0kGL/NHjWuPhAe9UWVFRjSSDvu2kDYGzEqVpWmIyIYzBVq+GA/WhI1
+dTCHtS7EwIRn0bT6xY9B1FI9HsnZtCDHHXJt38C4y9xqCpG8FLA5AS7UD+wpRKGE
+NYa27YB0Lz8WuMR5ci+vycgCb4BX1wbGNSu4aGtax01KXQk6oa4iFSMK1MuUiXmc
+KwoU+lr0jcKCm5rtWuLa
+=q1I+
 -----END PGP SIGNATURE-----
